Update loading message in index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div id="loading" class="full-screen" style="background: var(--bg-gradient);">
     <div class="loader"></div>
     <p style="opacity: 0.8; letter-spacing: 0.5px; font-size: 0.9rem;">
-      Memuat Soal Ujian...
+      Loading ..
     </p>
   </div>
 
