Update title from 'PORTAL' to 'E-Portal Data'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="theme-color" content="#1e1b4b"> 
 
-<title>PORTAL</title>
+<title>E-Portal Data</title>
   <link rel="icon" href="https://png.pngtree.com/png-vector/20220710/ourmid/pngtree-garuda-indonesia-illustration-with-red-and-white-wavy-flag-png-image_5750966.png" />
 
   <style>
